Новые цветы, рецепты букетов, респрайты, ящик цветов в продажу (#577)

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -1490,6 +1490,7 @@
   - type: Tag
     tags:
     - Vegetable
+    - FoodChiliPepper # DS14
   - type: FoodSequenceElement
     entries:
       Taco: ChiliPepper
