--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
@@ -761,6 +761,7 @@
   - type: Tag
     tags:
     - Slice
+    - FoodCheeseSlice # DS14
   - type: FoodSequenceElement
     entries:
       Taco: CheeseTaco
