--- a/Resources/Prototypes/_DeadSpace/tags.yml
+++ b/Resources/Prototypes/_DeadSpace/tags.yml
@@ -1,4 +1,7 @@
 - type: Tag
+  id: ADTFoodSausageFried
+
+- type: Tag
   id: AmbrosiaDeus
 
 - type: Tag
@@ -27,6 +30,12 @@
 
 - type: Tag
   id: BorgSecTorso
+
+- type: Tag
+  id: DarkFlower
+
+- type: Tag
+  id: DrinkBeerBottleFull
 
 - type: Tag
   id: CakeBrain
@@ -75,6 +84,12 @@
 
 - type: Tag
   id: FittableInBackpackCase
+
+- type: Tag
+  id: FoodCheeseSlice
+
+- type: Tag
+  id: FoodChiliPepper
 
 - type: Tag
   id: GiantSpiderSpace
@@ -144,6 +159,15 @@
 
 - type: Tag
   id: MukhtarWearable
+
+- type: Tag
+  id: PinkFlower
+
+- type: Tag
+  id: PurpleFlower
+
+- type: Tag
+  id: RedFlower
 
 - type: Tag
   id: Necro
@@ -279,3 +303,11 @@
 
 - type: Tag
   id: WeldingMaskWhite
+
+- type: Tag
+  id: WhiteFlower
+
+- type: Tag
+  id: YellowFlower
+
+  # Обязательно в алфавитном порядке
