Портативная консоль исследований (#743)

--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -286,6 +286,7 @@
     - id: CorporateCircuitBoard # DS14
     - id: NTDefaultCircuitBoard # DS14
     - id: EncryptionKeyBinary # DS14
+    - id: TabletRD # DS14
 
 # Hardsuit table, used for suit storage as well
 - type: entityTable
