Правки обновления (мет, сигаретные пачки, консоль ID тайпана) (#744)

--- a/Resources/Maps/corvax_pearl.yml
+++ b/Resources/Maps/corvax_pearl.yml
@@ -132,7 +132,7 @@ entities:
     - type: Broadphase
     - type: OccluderTree
     - type: Parallax
-      parallax: IceWater
+      parallax: Water
     - type: MapAtmosphere
       space: False
       mixture:
