--- a/Resources/Prototypes/Entities/Objects/Consumable/Smokeables/Cigars/case.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Smokeables/Cigars/case.yml
@@ -48,6 +48,7 @@
       - CigFilter
       - RollingPaper
       - Paper
+      - Lighter
 # DS14-end
   - type: Item
     sprite: Objects/Consumable/Smokeables/Cigars/case.rsi
