--- a/Resources/Prototypes/_DeadSpace/Entities/Structures/Machines/Computers/computers.yml
+++ b/Resources/Prototypes/_DeadSpace/Entities/Structures/Machines/Computers/computers.yml
@@ -295,7 +295,7 @@
 - type: entity
   parent: BaseComputerAiAccess
   id: ComputerTaipanId
-  name: консоль ID карт
+  name: консоль ID-карт
   suffix: Тайпан
   description: Терминал для программирования ID-карт сотрудников.
   components:
@@ -318,6 +318,7 @@
     - TaipanExternal
     privilegedIdSlot:
       name: id-card-console-privileged-id
+      startingItem: TaipanCommunicationsOfficerIDcard
       ejectSound: /Audio/Machines/id_swipe.ogg
       insertSound: /Audio/Weapons/Guns/MagIn/batrifle_magin.ogg
       ejectOnBreak: true
