--- a/Resources/Maps/Nonstations/nukieplanet.yml
+++ b/Resources/Maps/Nonstations/nukieplanet.yml
@@ -4,7 +4,7 @@ meta:
   engineVersion: 267.2.0
   forkId: ""
   forkVersion: ""
-  time: 11/25/2025 18:05:07
+  time: 12/05/2025 15:35:34
   entityCount: 2682
 maps:
 - 1
@@ -2835,7 +2835,7 @@ entities:
       pos: -11.5,-0.5
       parent: 2
     - type: Door
-      secondsUntilStateChange: -261702.56
+      secondsUntilStateChange: -261732.52
       state: Opening
     - type: DeviceLinkSource
       lastSignals:
@@ -2848,7 +2848,7 @@ entities:
       pos: 3.5,-6.5
       parent: 2
     - type: Door
-      secondsUntilStateChange: -218793.72
+      secondsUntilStateChange: -218823.67
       state: Opening
     - type: DeviceLinkSource
       lastSignals:
@@ -12856,7 +12856,7 @@ entities:
     - type: Transform
       pos: 5.59083,8.389327
       parent: 2
-- proto: MachineCentrifuge
+- proto: MachineElectrolysisUnit
   entities:
   - uid: 1717
     components:
