Исправления ренегата, перенос контента тайпана в дс пространство (#802)

--- a/Resources/Prototypes/Entities/Mobs/Player/ShuttleRoles/settings.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/ShuttleRoles/settings.yml
@@ -481,7 +481,7 @@
 
 - type: randomHumanoidSettings
   id: VisitorLawyer
-  parent: VisitorSecurity # DS14
+  parent: VisitorCivilian
   components:
     - type: GhostRole
       name: job-name-lawyer
