--- a/Resources/Prototypes/_DeadSpace/Entities/Stations/taipan.yml
+++ b/Resources/Prototypes/_DeadSpace/Entities/Stations/taipan.yml
@@ -1,10 +1,21 @@
 - type: entity
+  id: BaseStationTaipan
+  parent:
+  - BaseStationSyndicate
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: StationTaipan
+  - type: NpcFactionMember
+    factions:
+    - Taipan
+
+- type: entity
   id: StandardTaipanStation
   parent:
   - BaseStation
   # - BaseStationNews
   - BaseStationTaipanCargo
-  # - BaseStationJobsSpawning
+  # - BaseTaipanStationJobsSpawning
   # - BaseStationRecords
   - BaseTaipanStationShuttles
   - BaseTaipanStationAlertLevels
