--- a/Resources/Prototypes/_DeadSpace/Maps/taipan.yml
+++ b/Resources/Prototypes/_DeadSpace/Maps/taipan.yml
@@ -17,6 +17,10 @@
 #          TaipanCargotech: [ 0, 2 ]
 #          TaipanChef: [ 0, 1 ]
 #          TaipanMedic: [ 0, 2 ]
+#          TaipanParamedic: [ 0, 1 ]
 #          TaipanResearchDirector: [ 0, 1 ]
-#          TaipanResearcher: [ 0, 2 ]
+#          TaipanResearcher: [ 0, 3 ]
 #          TaipanCommunicationsOfficer: [ 0, 1 ]
+#          TaipanTechnician: [ 0, 2 ]
+#          TaipanTechnicalOperationsSupervisor: [ 0, 1 ]
+#          TaipanRecruit: [ 0, 2 ]
